--- a/AV/Development/BST-insert-proficiency.html
+++ b/AV/Development/BST-insert-proficiency.html
@@ -36,179 +36,7 @@
   <script src="../../lib/odsaUtils.js"></script>
   <script src="../../lib/odsaAV.js"></script>
   <script src="stack.js"></script>
-
-  <script>
-        var insertArray = [],
-            binaryTree,
-            stack,
-            insertSize = 10,
-            av = new JSAV($("#jsavcontainer"));
-
-        JSAV._types.ds.BinaryTree.prototype.insert = function(value) {
-            // helper function to recursively insert
-            var ins = function(node, insval) {
-              var val = node.value();
-              if (!val || val === "jsavnull") { // no value in node
-                node.value(insval);
-              } else if (val - insval >= 0) { // go left
-                if (node.left()) {
-                  ins(node.left(), insval);
-                } else {
-                  node.left(insval);
-                }
-              } else { // go right
-                if (node.right()) {
-                  ins(node.right(), insval);
-                } else {
-                  node.right(insval);
-                }
-              }
-            };
-            if ($.isArray(value)) { // array of values
-              for (var i = 0, l = value.length; i < l; i++) {
-                ins(this.root(), value[i]);
-              }
-            } else {
-              ins(this.root(), value);
-            }
-            return this;
-        };
-
-        av.recorded(); // we are not recording an AV with an algorithm
-
-        function initialize() {
-            turnAnimationOff();
-
-            insertArray = JSAV.utils.rand.numKeys(10, 100, insertSize, {test: dataTest, tries: 10});
-            if (stack) {
-                stack.clear();
-            }
-            stack = av.ds.stack({center: true});
-            for (var i = 0; i < insertSize; i++) {
-                stack.addLast(insertArray[i]);
-            }
-            stack.layout();
-            stack.first().highlight();
-
-            if (binaryTree) {
-                binaryTree.clear();
-            }
-            binaryTree = av.ds.bintree({center: true, visible: true, nodegap: 15});
-            binaryTree.root("");
-            binaryTree.root().addClass("emptynode");
-            binaryTree.click(clickHandler);
-            binaryTree.layout();
-
-            function dataTest(array) {
-                var bst = av.ds.bintree();
-                bst.insert(array);
-                var result = bst.height() <= 5;
-                bst.clear();
-                return result;
-            }
-
-            restoreAnimationState(); 
-
-            return binaryTree;
-        }
-        
-        function modelSolution(jsav) {
-            jsav._undo = [];
-
-            var modelStack = jsav.ds.stack({center: true});
-            for (var i = 0; i < insertSize; i++) {
-                modelStack.addLast(insertArray[i]);
-            }
-            modelStack.layout();
-            modelStack.first().highlight();
-
-            var modelTree = jsav.ds.bintree({center: true, visible: true, nodegap: 10});
-            modelTree.root("");
-            modelTree.root().addClass("emptynode");
-            modelTree.layout();
-
-            jsav.displayInit();
-
-            for (var i = 0; i < insertSize; i++) {
-                var val = insertArray[i];
-                var node = modelTree.root();
-                while (node.value() !== "") {
-                    if (val <= node.value()) {
-                        node = node.left();
-                    } else {
-                        node = node.right();
-                    }
-                }
-                node.value(val);
-                node.left("");
-                node.left().element.addClass("emptynode");
-                node.right("");
-                node.right().element.addClass("emptynode");
-                modelTree.layout();
-                node.removeClass("emptynode");
-
-                modelStack.removeFirst();
-                modelStack.layout();
-                if (modelStack.first()) {
-                    modelStack.first().highlight();
-                }
-
-                jsav.stepOption("grade", true);
-                jsav.step();
-            }
-
-            return modelTree;
-        }
-
-        function clickHandler() {
-            if (stack.size()) {
-                //insert value into this node
-                this.value(stack.first().value());
-                //remove value from the stack
-                stack.removeFirst();
-                stack.layout();
-                //highlight the next value
-                if (stack.first()) {
-                    stack.first().highlight();
-                }
-                if (!this.left()) {
-                    //add empty node on the left side
-                    this.left("");
-                    this.left().element.addClass("emptynode");
-                }
-                if (!this.right()) {
-                    //add empty node on the right side
-                    this.right("");
-                    this.right().element.addClass("emptynode");
-                }
-                //update tree
-                binaryTree.layout();
-                //remove class for dashed border
-                this.removeClass("emptynode");
-                //gradeable step
-                exercise.gradeableStep();
-            }
-        }
-
-        var oldfx;
-
-        function turnAnimationOff() {
-            //save the state of fx.off
-            var oldfx = $.fx.off || false;
-            //turn off the jQuery animations
-            $.fx.off = true;
-        }
-
-        function restoreAnimationState() {
-            $.fx.off = oldfx;
-        }
-
-        var exercise = av.exercise(modelSolution, initialize,
-                                   { "css": "background-color" },
-                                   { controls: $(".jsavexercisecontrols"),
-                                     feedback: "continuous",
-                                     fixmode: "undo" });
-        exercise.reset();
-  </script>
+  <script src="BSTCODE.js"></script>
+  <script src="BST-insert-proficiency.js"></script>
 </body>
 </html>
