Removed hardcoded JSAV exercise options from AVs, so they can use the global values set during configuration, updating formatting of several Development AVs

--- a/AV/Development/binheapBuildPRO.html
+++ b/AV/Development/binheapBuildPRO.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="binheapBuildPRO.css" type="text/css" />
+    <link rel="stylesheet" href="binheapPRO.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -25,19 +25,19 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-	  <p class="instructLabel">Instructions:</p>
-	  <p class="instructions">
-	    In this exercise, your task is to run the build-heap
-	    algorithm on the heap. The min-heap is visualized both as
-	    a binary tree and array and the exercise can be completed
-	    by swapping keys in either visualization. You can swap two
-	    elements by first clicking on one element and then
-	    another.
-	  </p>
+          <p class="instructLabel">Instructions:</p>
+          <p class="instructions">
+            In this exercise, your task is to run the build-heap
+            algorithm on the heap. The min-heap is visualized both as
+            a binary tree and array and the exercise can be completed
+            by swapping keys in either visualization. You can swap two
+            elements by first clicking on one element and then
+            another.
+          </p>
           <p id="procontrols">
             <span class="jsavscore"></span>
           </p>
-	</div>
+        </div>
       </form>
     </div>
     <script src="../../lib/jquery.min.js"></script>
