--- a/AV/Development/binheapDeletePRO.html
+++ b/AV/Development/binheapDeletePRO.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="binheapDeletePRO.css" type="text/css" />
+    <link rel="stylesheet" href="binheapPRO.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -15,7 +15,6 @@
             <input type="button" id="help" name="help" value="Help" />
           </td>
           <td class="headerCenter">
-	    <input id="decrement" type="button" value="Decrement heapsize" />
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
@@ -26,25 +25,23 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-	  <p class="instructLabel">Instructions:</p>
-	  <p class="instructions">
-	    Perform DeleteMin three times, and after each deletion,
-	    restore heap property. For each record stored into heap
-	    you can see a key that corresponds to the
-	    priority. "Decrement heap size" -button will delete the
-	    last key of the heap. In addition, by first clicking one
-	    key and then another, you can swap the records.
-	  </p>
+          <p class="instructLabel">Instructions:</p>
+          <p class="instructions">
+            Perform DeleteMin three times, and after each deletion,
+            restore heap property. For each record stored into heap
+            you can see a key that corresponds to the
+            priority. "Decrement heap size" -button will delete the
+            last key of the heap. In addition, by first clicking one
+            key and then another, you can swap the records.
+          </p>
+          
+          <input id="decrement" type="button" value="Decrement heapsize" />
           <p id="procontrols">
             <span class="jsavscore"></span>
           </p>
-	</div>
+        </div>
       </form>
     </div>
-    <script
-       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script src="../../lib/jquery.min.js"></script>
     <script src="../../lib/jquery-ui.min.js"></script>
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
