--- a/AV/Development/binheapInsertPRO.html
+++ b/AV/Development/binheapInsertPRO.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="binheapInsertPRO.css" type="text/css" />
+    <link rel="stylesheet" href="binheapPRO.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -25,20 +25,19 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-	  <p class="instructLabel">Instructions:</p>
-	  <p class="instructions">
-	    Insert the stream of keys shown
-	    on the upper-left corner into an originally empty minimum binary
-	    heap. The heap is also depicted in binary tree representation
-	    even though the implementation is an array starting from index 1
-	    (the root node). Each record stored into Heap is represented by
-	    a key that shows its priority. You can insert a key by clicking
-	    an empty index/node and restore heap property after each
-	    insertion by making swaps. You can swap two records by first
-	    clicking one, then the other.
-	  </p>
+          <p class="instructLabel">Instructions:</p>
+          <p class="instructions">
+            Insert the stream of keys shown
+            on the upper-left corner into an originally empty minimum binary
+            heap. The heap is also depicted in binary tree representation
+            even though the implementation is an array starting from index 1
+            (the root node). Each record stored into Heap is represented by
+            a key that shows its priority. You can insert a key by clicking
+            an empty index/node and restore heap property after each
+            insertion by making swaps. You can swap two records by first
+            clicking one, then the other.
+          </p>
           <p id="procontrols">
-	    <p id="insert">Insert</p>
             <span class="jsavscore"></span>
           </p>
         </div>
