Updates related to sorting exercises, and fixing old config files

--- a/Exercises/Sorting/SelsortFIB2.html
+++ b/Exercises/Sorting/SelsortFIB2.html
@@ -13,9 +13,6 @@
 <div class="exercise">
   <div class = "vars">
     <var id="NUM">randRange(25, 50)</var>
-    <var id="Numm1">NUM-1</var>
-    <var id="Nump1">NUM+1</var>
-    <var id="Num2">NUM/2</var>
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
@@ -24,7 +21,7 @@
 	iterations of the main loop.
         How many records are now guaranteed to be in their final
 	position (never to be moved again by the sort)?</p>
-      <div class="solution"><var>NUM</var></div>
+      <div class="solution" data-type="text"><var>NUM</var></div>
       <div class="hints">
 	<p>On each pass, Selection Sort puts a record into its final
 	position.</p>
