--- a/Exercises/Sorting/SelsortSumm.html
+++ b/Exercises/Sorting/SelsortSumm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="exercise" data-name="SelsortMCQ1"></div>
-  <div class="exercise" data-name="SelsortMCQ2"></div>
+  <div class="exercise" data-name="SelsortFIB2"></div>
   <div class="exercise" data-name="SelsortTF6"></div>
   <div class="exercise" data-name="SelsortMCQcomplex"></div>
   <div class="exercise" data-name="SelsortMCQcomps"></div>  
