--- a/AV/Development/binarytree-levelorder.html
+++ b/AV/Development/binarytree-levelorder.html
@@ -5,38 +5,50 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <style>
-    .instructLabel {
-    padding: 10px;
+    #container {
+      width: 780px;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <form class="avcontainer">
-      <div class="jsavcanvas">
-        <p class="instructLabel">Instructions:</p>
-        <p class="instructions">
-          Reproduce the behavior of binary tree level order
-            traversal. Click nodes to indicate the order in 
-            which the traversal algorithm would visit them.
-        </p>
-        <p align="center">
-          <span class="jsavexercisecontrols"></span>
-          <span class="jsavscore"></span>
-        </p>
-      </div>
-    </form>
-  </div>
-  <script src="../../lib/jquery.min.js"></script>
-  <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../JSAV/lib/jquery.transform.light.js"></script>
-  <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="../../lib/odsaUtils.js"></script>
-  <script src="../../lib/odsaAV.js"></script>
-  <script src="binarytreeTraversals.js"></script>
-  <script>
-    new TreeTraversal(JSAV._types.ds.BinaryTree.prototype.levelOrderTraversal);
-  </script>
+<div id="container">
+  <table class="proHeaderTable">
+    <tr>
+      <td class="headerLeft">
+        <input type="button" id="help" name="help" value="Help" />
+      </td>
+      <td class="headerCenter">
+        <p class="jsavexercisecontrols"></p>
+      </td>
+      <td class="headerRight">
+        <input type="button" id="about" name="about" value="About" />
+        <a id="settings" class="jsavsettings" href="#">Settings</a>
+      </td>
+    </tr>
+  </table>
+  <form class="avcontainer">
+    <p class="instructLabel">Instructions:</p>
+    <p class="instructions">
+      Reproduce the behavior of binary tree level order traversal. Click nodes to indicate the order in which the traversal algorithm would visit them.
+    </p>
+    <p align="center">
+      <span class="jsavscore"></span>
+    </p>
+    
+    <div id="av" class="jsavcanvas">
+    </div>
+  </form>
+</div>
+<script src="../../lib/jquery.min.js"></script>
+<script src="../../lib/jquery-ui.min.js"></script>
+<script src="../../JSAV/lib/jquery.transform.light.js"></script>
+<script src="../../JSAV/lib/raphael.js"></script>
+<script src="../../JSAV/build/JSAV-min.js"></script>
+<script src="../../lib/odsaUtils.js"></script>
+<script src="../../lib/odsaAV.js"></script>
+<script src="binarytreeTraversals.js"></script>
+<script>
+  new TreeTraversal(JSAV._types.ds.BinaryTree.prototype.levelOrderTraversal);
+</script>
 </body>
 </html>
