Added fix function to binary tree traversals; improved label visibility.

--- a/AV/Development/binarytree-inorder.html
+++ b/AV/Development/binarytree-inorder.html
@@ -8,6 +8,10 @@
     #container {
       width: 780px;
     }
+    .jsavlabel {
+      background-color: inherit;
+      z-index: 100;
+    }
   </style>
 </head>
 <body>
