--- a/AV/Development/PrimAVPE.html
+++ b/AV/Development/PrimAVPE.html
@@ -28,6 +28,7 @@
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
             Reproduce the behavior of Prim's Algorithm for the given graph below. Just Click on the appropriate Graph Nodes to add to the MST. 
+			Start with Node A. In case of similar weights add nodes alphabetically.
           </p>
           <p id="procontrols">
             <span class="jsavscore"></span>
