Updated the computation of the alignment array.

--- a/Exercises/Development/Boyer_Moore_Alignment_Exercise.html
+++ b/Exercises/Development/Boyer_Moore_Alignment_Exercise.html
@@ -108,41 +108,8 @@
     }   
   }
 
+  //function used to do most of the work to compute the align array
   function find_last_match(str, p, sub) {
-   /* var added_amount = i;
-    var local_answer = str.lastIndexOf(sub.substring(p+added_amount, sub.length));
-    if(local_answer == -1) { //base case, suffix not found 
-      return find_last_match(str.substring(0,str.length), p, sub, added_amount++);
-    //} else if(str.charAt(local_answer) != sub.charAt(p)) { //we found our match
-    } else if(local_answer != p) { //we found our match we just want to make sure that it isn't matching the character we are at
-      return local_answer;
-    } else { //shorten the string and try again so we don't get the same sub string
-      return find_last_match(str.substring(0, str.length-1), p, sub, added_amount); 
-    }   
-    return -1;
-    /*if(local_answer == -1)
-      return -1;
-    else
-      return local_answer;   
-    var local_answer;
-    var added_amount = i;
-    var subtract_amount = 1;
-    while((p+added_amount) != (sub.length - subtract_amount)){ 
-      local_answer = str.lastIndexOf(sub.substring(p+added_amount, sub.length - subtract_amount));
-      if(local_answer == -1) {
-        added_amount++;
-        subtract_amount = 0;
-      }
-      else if(str.charAt(local_answer) != sub.charAt(p))
-        return local_answer;
-      else if (str.charAt(local_answer) == sub.charAt(p)) {
-        subtract_amount++;
-      }
-
-    }
-    return -1;
-    */
-
     //local variables
     var not_found = true;
     var check_first = false;
@@ -154,8 +121,8 @@
         local_answer = str.lastIndexOf(sub.substring(p+1, sub.length - subtract_amount));
         if(local_answer == -1) { //case that it wasn't initially found, we need to check the front of the string for p+n
           check_first = true;
-        } else if(local_answer != p){ //index was found
-          return local_answer;
+        } else if(str.charAt(local_answer) != str.charAt(p)){ //check to make sure preceding characters don't match
+          return local_answer;                                //solution found
         } else if(local_answer == p) { //index was found but at a bad location, so we subtract from the end of the string
           subtract_amount++;
         }
@@ -166,8 +133,11 @@
         }
       }
     }
-	return "not_found";
+    return "not found"; //can't return false/true or any number because 1 == true and 0 == false, this could also return negative integers which could conflict so I have resorted to returning a string
+
   }
+
+  //function to compute the align array, calls find_last_match
   function compute_align_table( sub ) {
     var align = new Array();
     var offset, suffix_length, index_of_sub;
