--- a/AV/Development/graphEditor.html
+++ b/AV/Development/graphEditor.html
@@ -22,44 +22,34 @@
         <h1>Custom Graph Editor</h1>
       </td>
       <td class="headerRight">
-        <input type="button" id="about" name="about" value="About" />
+        <input type="button" id="about" name="about" value="About">
       </td>
     </tr>
   </table>
   
   
  <div class="createGraphs">
- <input type="button" id="createGraph"  value="Create Graph"> </input>
- <input type="button" id="reshowGraph" value="Reshow Graph"> </input>
-</div>
+ <input type="button" id="createGraph"  value="Create Graph"> 
+ <input type="button" id="reshowGraph" value="Reshow Graph"> 
+ </div>
 
   
     <div id="graphControls">
-      <input type="button" id="addNodeMode" name="addNodeMode" value="Add Nodes" /input>
-	  <input type="button" id="addEdgeMode" name="addEdges" value="Add Egdes" /input>
-	  <input type="button" id ="addWeightedEdgeMode" name ="addWeightedEdgeMode" value="Add Weighted Edges" /input>
-	  <input type="button" id="moveNodeMode" name="moveNodeMode" value="Move a Node" /input>
-	  <input type="button" id="done" name="done" value="Done" /input>
-	  <input type="checkbox" id ="chkbox" name="chkbox" value="directed"/><label for = "chkbox">Directed</label>	
+      <input type="button" id="addNodeMode" name="addNodeMode" value="Add Nodes" >
+	  <input type="button" id="addEdgeMode" name="addEdges" value="Add Edges" >
+	  <input type="button" id ="addWeightedEdgeMode" name ="addWeightedEdgeMode" value="Add Weighted Edges" >
+	  <input type="button" id="moveNodeMode" name="moveNodeMode" value="Move a Node" >
+	  <input type="button" id="done" name="done" value="Done">
+	  <input type="checkbox" id ="chkbox" name="chkbox" value="Directed" onclick="isChecked()">
 	</div>
 	
 
- 
-
 <div class="avcontainer">
-
       <p class="jsavoutput jsavline"></p>  
 </div>
 
 
 
-<div class="avcontainer2">
-
-      <p class="jsavoutput jsavline"></p>  
-</div>
-
-
-  
   
  
 </div> 
