Fixed a bug with index being selected after reset

--- a/Exercises/Sorting/BubsortPRO.html
+++ b/Exercises/Sorting/BubsortPRO.html
@@ -56,6 +56,7 @@ var f_reset = function () {
   jsavArr = jsav.ds.array(cloneArr, {indexed: true, center: false});
   jsavArr.click(clickHandler); // Rebind click handler after reset
   userInput = false;
+  selected_index = -1;         // Reset to nothing selected
 };
 
 // swap two values in array
