--- a/Exercises/Sorting/QuicksortFIBtimeB.html
+++ b/Exercises/Sorting/QuicksortFIBtimeB.html
@@ -18,7 +18,7 @@
 	the machine can do about 10,000 comparisons per second. To
 	get the answer, you first need to compute about how many
 	total comparisons 1,000,000 records will require.)</p>
-      <div class="solution" data-forms="integer"><var>2000</var></div>
+      <div class="solution" data-type="text"><var>2000</var></div>
       <ul class="hints">
 	<p>What is Quicksort's average case running time?</p>
 	<p>It is <code>\Theta(n \log n)</code></p>
