--- a/Exercises/Sorting/QuicksortMCQpartit.html
+++ b/Exercises/Sorting/QuicksortMCQpartit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>Quicksort Multiple Choice Question: Partition</title>
   <script src="../../lib/jquery.min.js"></script>
