--- a/Exercises/Sorting/QuicksortSumm.html
+++ b/Exercises/Sorting/QuicksortSumm.html
@@ -19,8 +19,8 @@
   <div class="exercise" data-name="QuicksortMCQequal"></div>
   <div class="exercise" data-name="QuicksortMCQpartit"></div>
   <div class="exercise" data-name="QuicksortTFstable"></div>
-  <div class="exercise" data-name="QuicksortMCQtimeA"></div>
-  <div class="exercise" data-name="QuicksortMCQtimeB"></div>
+  <div class="exercise" data-name="QuicksortFIBtimeA"></div>
+  <div class="exercise" data-name="QuicksortFIBtimeB"></div>
   <div class="exercise" data-name="QuicksortMCQwhen"></div>
 </body>
 </html>
