--- a/AV/Development/graphEditor.html
+++ b/AV/Development/graphEditor.html
@@ -35,7 +35,8 @@
 
   
     <div id="graphControls">
-      <input type="button" id="addNodeMode" name="addNodeMode" value="Add Nodes" >
+    <input type="button" id="addNodeMode" name="addNodeMode" value="Add Nodes" >
+    <input type="button" id="removeNodeMode" name="removeNodeMode" value="Remove Nodes" > 
 	  <input type="button" id="addEdgeMode" name="addEdges" value="Add Edges" >
 	  <input type="button" id ="addWeightedEdgeMode" name ="addWeightedEdgeMode" value="Add Weighted Edges" >
 	  <input type="button" id="moveNodeMode" name="moveNodeMode" value="Move a Node" >
