--- a/Exercises/Development/Boyer_Moore_EX_PRO.html
+++ b/Exercises/Development/Boyer_Moore_EX_PRO.html
@@ -330,39 +330,6 @@
 
       //this is a recursive function to find the real last index of the suffix
       function find_last_match(str, p, sub) {
-       /* var added_amount = i;
-        var local_answer = str.lastIndexOf(sub.substring(p+added_amount, sub.length));
-        if(local_answer == -1) { //base case, suffix not found 
-          return find_last_match(str.substring(0,str.length), p, sub, added_amount++);
-        //} else if(str.charAt(local_answer) != sub.charAt(p)) { //we found our match
-        } else if(local_answer != p) { //we found our match we just want to make sure that it isn't matching the character we are at
-          return local_answer;
-        } else { //shorten the string and try again so we don't get the same sub string
-          return find_last_match(str.substring(0, str.length-1), p, sub, added_amount); 
-        }   
-        return -1;
-        /*if(local_answer == -1)
-          return -1;
-        else
-          return local_answer;   
-        var local_answer;
-        var added_amount = i;
-        var subtract_amount = 1;
-        while((p+added_amount) != (sub.length - subtract_amount)){ 
-          local_answer = str.lastIndexOf(sub.substring(p+added_amount, sub.length - subtract_amount));
-          if(local_answer == -1) {
-            added_amount++;
-            subtract_amount = 0;
-          }
-          else if(str.charAt(local_answer) != sub.charAt(p))
-            return local_answer;
-          else if (str.charAt(local_answer) == sub.charAt(p)) {
-            subtract_amount++;
-          }
-
-        }
-        return -1;
-        */
 
         //local variables
         var not_found = true;
@@ -494,7 +461,7 @@
             indexes_checked = num_into_sub-1; //case that they are already in the string somewhere
           }
             
-			console.log("indexes checked: "+indexes_checked);
+		  //console.log("indexes checked: "+indexes_checked);
           while(s >= 0 && master.value(m) == sub.value(m)) {
             //console.log(master.value(m) + " " + sub.value(m));  
             m = m-1;
@@ -522,7 +489,7 @@
             m = m + parseInt(amount_to_move);
             //real_master_answer = m;
             //console.log("indexes checked: "+indexes_checked);
-            console.log("the indexes checked now are: "+indexes_checked);
+            //console.log("the indexes checked now are: "+indexes_checked);
             amount_to_shift = amount_to_move - indexes_checked;
             //console.log("shifting by: " + amount_to_shift);
             for(var i = sub.size()-1; i >= amount_to_shift; i--) {
@@ -642,11 +609,11 @@
             
             sub_str_curr = str_curr;
             sub_str.highlight(sub_str_curr); 
-            num_into_sub = 0;        
+            num_into_sub = 1; //after the shift they will be one into the comparison    
           }         
         } else {
-          num_into_sub++;
-        }
+          num_into_sub++;      
+		}
         //console.log(num_into_sub);
         exercise.gradeableStep();
 
