Integrating the Graph Editor with PrimAV

--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -26,8 +26,10 @@
   
   <form id="ssperform">
     <p>
-      <input type="button" id="runit" name="runit" value="Run" />
+      <input type="button" id="runit" name="runit" value="Run Example" />
       <input type="button" id="reset" name="reset" value="Reset" />
+	  <input type="button" id="create" value="Create Your Own Graph" />
+	  <input type="button" id="show" value="Run on your Graph"/>
     </p>
   </form>
   <div class="avcontainer">
