--- a/AV/Development/graphEditor.html
+++ b/AV/Development/graphEditor.html
@@ -71,6 +71,7 @@
 <script src="../../lib/odsaUtils.js"></script>
 <script src="../../lib/odsaAV.js"></script>
 <script src="graphEditor.js"></script>
+<script src="serializableGraph.js"></script>
 
   
 <!--<script src="../../lib/jquery.min.js"></script>
