Update to JSAV 0.7.0-19, add tutorials on searching and memory management, other minor updates

--- a/Exercises/Hashing/HashMCQtablesize.html
+++ b/Exercises/Hashing/HashMCQtablesize.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math spin graphie graphie-helpers-arithmetic word-problems">
+<html data-require="math">
 <head>
   <title>Hashing Question: Array Change</title>
   <script src="../../lib/jquery.min.js"></script>
