Adding email support for primAV

--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -30,6 +30,7 @@
       <input type="button" id="reset" name="reset" value="Reset" />
 	  <input type="button" id="create" value="Create Your Own Graph" />
 	  <input type="button" id="show" value="Run on your Graph"/>
+	  <input type="button" id="email" value="Email this visualization"/>
     </p>
   </form>
   <div class="avcontainer">
@@ -47,5 +48,6 @@
 <script src="../../lib/odsaUtils-min.js"></script>
 <script src="../../lib/odsaAV-min.js"></script>
 <script src="PrimAV.js"></script>
+<script type="text/javascript" src="https://mandrillapp.com/api/docs/js/mandrill.js"></script>
 </body>
 </html>
